--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -23,7 +23,7 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net47" />
   <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net47" />
-  <package id="MarkdownDeep.NET.Core" version="1.5.0.3" targetFramework="net47" />
+  <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net47" />
@@ -98,6 +98,7 @@
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
+  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
