--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -25,6 +25,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NHttp" version="0.1.9.0" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
