--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -38,6 +38,7 @@
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
+  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
