--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -22,6 +22,9 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="deploy\AntiPlagiarism.Web.Task.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AntiPlagiarism.Api\AntiPlagiarism.Api.csproj" />
