--- a/src/GiftsGranter/GiftsGranter.csproj
+++ b/src/GiftsGranter/GiftsGranter.csproj
@@ -205,6 +205,9 @@
       <Name>Database</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="deploy\GiftsGranter.Task.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OctoPack.3.6.3\build\OctoPack.targets" Condition="Exists('..\packages\OctoPack.3.6.3\build\OctoPack.targets')" />
 </Project>
