--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -5,7 +5,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Ionic.Zip" Version="1.9.1.8" />
+    <PackageReference Include="DotNetZip" Version="1.10.1" />
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
