--- a/src/Notifications/packages.config
+++ b/src/Notifications/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
-  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
