--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
@@ -62,5 +63,4 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
-  <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net47" />
 </packages>
