--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="ApprovalTests" version="3.0.13" targetFramework="net47" />
   <package id="ApprovalUtilities" version="3.0.13" targetFramework="net47" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net47" />
-  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net47" />
   <package id="JetBrains.dotMemoryUnit" version="2.3.20160517.113140" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
