--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -11,10 +11,12 @@
 		<add key="sleepSeconds" value="1" />
 		<add key="jobsToRequest" value="5" />
 		<add key="ulearn.runcsjob.threadsCount" value="1" />
+		<!-- By default agentName is computer name -->
+		<add key="ulearn.runcsjob.agentName" value="" />
 		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
 		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
 		<!-- Delete submissions after checking -->
-		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
+		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />		
 	</appSettings>
 	<startup> 
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
